src/main/java/test/ktalpha/Test8.java
package test.ktalpha;

class Member{
    int no;
    String name ;

    Member(int no){
        this.no = no;
    }

    Member(int no, String name){
        this.no = no;
        this.name = name;
    }
}

public class Test8 {
    public static void main(String[] args) {
//        Member one = new Member();  // error
    }
}
